# nlp-lab-text-classification

./: TextClassification_LeMonde.ipynb  pyproject.toml
