[project]
name = "nlp-lab-text-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel==7.1.0",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "sentence-transformers==5.2.2",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "transformers==5.0.0",
    "wordcloud==1.9.6",
]
